--- a/logged.html
+++ b/logged.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="All is Well , Successfully logged in">
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
   <title>Logged</title>
 </head>
 <body>
   
   <main class="logged">
     <div class="logged_Image_holder">
-      <img src="../assets/ImagePlaceholder3.png" alt="ImagePlaceholder3">
+      <img src="assets/ImagePlaceholder3.png" alt="ImagePlaceholder3">
     </div>
     <div class="logged_content">
       <h2>Successfully logged in</h2>
@@ -22,6 +22,6 @@
   </main>
 
 
-  <script src="../js/logged.js"></script>
+  <script src="js/logged.js"></script>
 </body>
 </html>
