--- a/register.html
+++ b/register.html
@@ -5,16 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="register here, ">
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/all.min.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="css/main.css">
   <title>Register</title>
 </head>
 <body>
   
   <main class="register">
     <div class="register_Image_holder">
-      <img src="../assets/ImagePlaceholder2.png" alt="ImagePlaceholder2">
+      <img src="assets/ImagePlaceholder2.png" alt="ImagePlaceholder2">
     </div>
     <div class="register_content">
       <h3>Create Account</h3>
@@ -46,7 +46,7 @@
     </div>
   </main>
 
-  <script src="../js/all.min.js"></script>
-  <script src="../js/register.js"></script>
+  <script src="js/all.min.js"></script>
+  <script src="js/register.js"></script>
 </body>
 </html>
